--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.container {
+.container-2 {
     width: 100vw;
     height: 700vh;
     position: absolute;
@@ -143,4 +143,17 @@
     width: 30vw;
     margin-top: 30vh;
     margin-left: 60vw;
+}
+
+.nav, .navbar {
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100vw !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.navbar-brand {
+    width: 25% !important;
 }
