--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@
 }
 
 .nav, .navbar {
-    position: absolute !important;
+    position: fixed;
     top: 0 !important;
     left: 0 !important;
     width: 100vw !important;
