--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,8 +152,11 @@
     width: 100vw !important;
     margin: 0 !important;
     padding: 0 !important;
+    height: 10vh !important;
 }
 
 .navbar-brand {
     width: 25% !important;
+    padding-top: 3vh !important;
+    padding-bottom: 3vh !important;
 }
