--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@
     width: 100vw !important;
     margin: 0 !important;
     padding: 0 !important;
-    height: 10vh !important;
+    height: fit-content;
 }
 
 .navbar-brand {
