--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,5 +161,6 @@
 
 .navbar-images {
     vertical-align: middle;
-    padding-bottom: 0 !important;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
 }
