--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,6 @@
 
 .navbar-images {
     vertical-align: middle;
-    padding-top: 5px !important;
-    padding-bottom: 5px !important;
+    padding-top: 1vh !important;
+    padding-bottom: 1vh !important;
 }
