--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,5 +163,5 @@
     vertical-align: middle;
     padding-top: 2vh !important;
     padding-bottom: 2vh !important;
-    width: 100%;
+    width: inherit;
 }
