--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,9 @@
     height: 100vh;
     margin: 0 !important;
     padding: 0 !important;
-    background-color: mediumseagreen;
+    background-image: url('../images/page-2.jpg');
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
     image-rendering: auto;
     image-rendering: crisp-edges;
     image-rendering: pixelated;
